src/objects/PQN_Targets__c.object
<CustomObject>
    <description>Object to store the target details</description>
    <fields>
        <fullName>Month__c</fullName>
        <description>Month for which the target has to be noted</description>
        <label>Month</label>
        <picklist>
            <picklistValues>
                <fullName>January</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Region_Geography__c</fullName>
        <description>The region for which target is entered</description>
        <label>Region/ Geography</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Reduction__c</fullName>
        <label>Target Reduction</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <description>Target for the month and year</description>
        <label>Target</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <description>Year for which the target has to be noted</description>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Targets</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Year__c</columns>
        <columns>Region_Geography__c</columns>
        <columns>Target_Reduction__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Targets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Validation_on_Target_Reduction</fullName>
        <active>true</active>
        <description>This Validation rule will ensure that the value of Target Reduction is not a negative value.</description>
        <errorConditionFormula>Target_Reduction__c &lt; 0</errorConditionFormula>
        <errorDisplayField>Target_Reduction__c</errorDisplayField>
        <errorMessage>You are not suppose to enter the Negative value for Target Reduction</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_on_Year</fullName>
        <active>true</active>
        <description>This validation rule will ensure that the user will not enter any alpha characters for the year field</description>
        <errorConditionFormula>! ISNUMBER( Year__c )</errorConditionFormula>
        <errorDisplayField>Year__c</errorDisplayField>
        <errorMessage>Please enter a valid year.</errorMessage>
    </validationRules>
</CustomObject>